--- a/s4-back/Dockerfile
+++ b/s4-back/Dockerfile
@@ -1,17 +1,9 @@
-FROM docker.arvancloud.ir/node:22-alpine
+FROM docker.arvancloud.ir/node:22
 
 WORKDIR /app
-
-COPY package.json .
-COPY package-lock.json .
-
-RUN npm install
 
 COPY . .
 
 EXPOSE 3000
 
-ENV HOST=0.0.0.0
-ENV PORT=3000
-
-CMD ["npm", "run", "production"]
+CMD ["node", "index.js"]
