--- a/Server/package.json
+++ b/Server/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "nodemon": "^3.1.0",
-    "pump": "^3.0.0"
+    "pump": "^3.0.0",
+    "uuid": "^10.0.0"
   },
   "packageManager": "yarn@4.5.0"
 }
