--- a/Server/package.json
+++ b/Server/package.json
@@ -11,6 +11,7 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/multipart": "^6.0.0",
     "@fastify/mysql": "^4.3.0",
+    "@fastify/rate-limit": "^9.1.0",
     "arcaptcha-nodejs": "^1.0.7",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
