--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,9 @@ services:
     ports:
       - 3000:3000
     environment:
-      - PORT=3000
-      - HOST=0.0.0.0
+      - SERVER_PORT=3000
+      - SERVER_HOST=0.0.0.0
       - MYSQL_URL=mysql://root:root@mysql_container/s4_sut
-      - SECRET_KEY=r8kveiqst3gaym9hdjpw
-      - SITE_KEY=4nma7h0vqd
     networks:
       - s4_network
 
