--- a/Client/Dockerfile
+++ b/Client/Dockerfile
@@ -2,11 +2,11 @@ FROM node:22-alpine
 
 WORKDIR /app
 
-COPY package*.json
+COPY package*.json .
 RUN npm install
 
 COPY . .
 
 EXPOSE 4173
 
-CMD ["npm","run","prod"]
+CMD ["ls"]
