--- a/k8s/configmaps/client.yaml
+++ b/k8s/configmaps/client.yaml
@@ -4,5 +4,5 @@ metadata:
   name: client-config
   namespace: s4-app
 data:
-  VITE_BASE_URL: "http://0.0.0.0:3000"
+  VITE_BASE_URL: "http://server-service:3000"
   VITE_HOST: "0.0.0.0"
