--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,8 @@
   "main": "main.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "production": "node index.js"
+    "production": "node index.js",
+    "test": "jest"
   },
   "author": "darmond157",
   "dependencies": {
@@ -15,6 +16,7 @@
     "arcaptcha-nodejs": "^1.0.7",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "pump": "^3.0.0",
     "uuid": "^10.0.0"
