--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: s4.ssei
+    - host: s4.ssei.com
       http:
         paths:
           - path: /client
