--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "production": "node index.js",
+    "dev": "nodemon main.js",
+    "production": "node main.js",
     "test": "jest"
   },
   "author": "darmond157",
@@ -12,12 +12,15 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/multipart": "^6.0.0",
     "@fastify/mysql": "^4.3.0",
+    "@fastify/one-line-logger": "^2.0.0",
     "@fastify/rate-limit": "^9.1.0",
     "arcaptcha-nodejs": "^1.0.7",
+    "close-with-grace": "^2.1.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "pino-pretty": "^11.2.2",
     "pump": "^3.0.0",
     "uuid": "^10.0.0"
   },
