--- a/server/package.json
+++ b/server/package.json
@@ -10,16 +10,19 @@
   "author": "darmond157",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/jwt": "^9.0.1",
     "@fastify/multipart": "^6.0.0",
     "@fastify/mysql": "^4.3.0",
     "@fastify/rate-limit": "^9.1.0",
     "close-with-grace": "^2.1.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
+    "fastify-bcrypt": "^1.0.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "pino-pretty": "^11.2.2",
     "pump": "^3.0.0",
+    "sequelize-fastify": "^2.0.0",
     "uuid": "^10.0.0"
   }
 }
