--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,10 +3,11 @@ FROM node:22-alpine
 WORKDIR /app
 
 COPY package*.json .
+
 RUN npm install
 
 COPY . .
 
 EXPOSE 3000
 
-CMD ["node", "index.js"]
+CMD ["npm", "run", "production"]
